--- a/docs/css/pixel_physics.css
+++ b/docs/css/pixel_physics.css
@@ -1,671 +1,1 @@
-
-.about {
-    padding: 0px;
-    margin: 0px;
-}
-
-.aboutnomarginymcboatface {
-    padding: 0px;
-    margin: 0px;
-    
-}
-
-
-
-.albumPageContainer {
-    position: relative;
-    width: 1000px;
-    height: 600px;
-    color: #000;
-    
-}
-
-.albumPageContainerIndex {
-    display: grid;
-    grid-gap: 0px;
-    grid-template-columns: 50% 50%;
-}
-
-.albumCanvas.midBox {
-    background-color: grey;
-}
-
-.albumBoxesPageNo {
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    padding: 0px;
-    margin: 0px;
-}
-
-.albumBoxes:hover {
-    border: 1px solid black;
-}
-
-.albumBoxes {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    grid-template-rows: 20% 20% 20% 20% 20%;
-    grid-template-columns: 33.3% 33.3% 33.3%;
-    display: grid;
-    grid-gap: 0px;
-    color: #000;
-    
-}
-
-.albumBoxesHidden {
-    display: none;
-}
-.breedingView, .newRandomStart .midBox  {
-          cursor: url(cursor/birdFlippingFingerHand.png), auto;
-}
-
-
-.highlighted {
-	position: relative;
-}
-
-.highlighted:after {
-	content: " ";
-	z-index: 1;
-	display: block;
-	position: absolute;
-	height: 100%;
-	top: 0;
-	left: 0;
-	right: 0;
-	background: rgba(0,0,0,0.5)
-}
-
-.engineeringBox {
-    cursor: url(cursor/hypodermic.png), auto;
-}
-
-.engineeringView, .engineering, .watchmakerView {
-    border: 1px black solid;
-    width: 100%;
-    height: 100%;
-    display: grid;
-    grid-template-columns: 100%;
-    grid-gap: 0px;
-    color: #000;
-}
-
-.geneboxes {
-    width: 1000px;
-    height: 20px;
-    display: grid;
-    grid-gap: 0px;
-    background-color: #fff;
-    color: #000;
-}
-
-.monochromeGeneboxes {
-    grid-template-columns: 6.25% 6.25% 6.25% 6.25% 6.25% 6.25% 6.25% 6.25%
-        6.25% 6.25% 6.25% 6.25% 6.25% 6.25% 6.25% 6.25%;
-}
-
-.colourGeneboxes {
-    grid-template-columns: 6.25% 6.25% 6.25% 6.25% 6.25% 6.25% 6.25% 6.25%
-        6.25% 6.25% 6.25% 6.25% 6.25% 6.25% 6.25% 6.25%;
-    height: 40px;
-}
-
-.colourPicker {
-
-    padding: 0px;
-    margin: 0px;
-}
-
-.colourPickerCubeDiv {
-    width: 180px;
-    height: 120px;
-    grid-gap: 0px;
-    display: grid;
-    grid-template-columns: 33.33% 33.33% 33.33% ;
-}
-
-.colourPickerCubeDivSlice {
-    width: 60px;
-    height: 60px;
-    grid-gap: 0px;
-    display: grid;
-    grid-template-columns: 10px 10px 10px 10px 10px 10px;
-}
-
-.colourPickerRampDiv {
-    width: 180px;
-    height: 40px;
-    grid-gap: 0px;
-    display: grid;
-    grid-template-columns: 18px 18px 18px 18px 18px 18px 18px 18px 18px 18px ;
-}
-
-.colourPickerCubeSwatch {
-    height: 10px;
-    width: 10px;
-}
-
-.colourPickerRampSwatch {
-    height: 10px;
-    width: 18px;
-}
-
-.colourPickerSelected {
-    border: solid 1px white;    
-}
-
-.shellGeneboxes {
-    grid-template-columns: 6.5%  6.5%  6.5%  6.5%  6.5%  6.5%  6.5%  6.5%  6.5%  6.5%  6.5%  6.5%  6.5% 15.5%;
-}
-
-.geneValue {
-    width: 100%; 
-    text-align:center;  
-    display:table;
-    font-size: 10pt;
-}
-
-.genebox {
-    position: relative;
-    background-color: #fff;
-    color: #000;
-    border-style: solid;
-    border-width: 1px;
-    border-color: black;
-    padding: 0px;
-}
-
-
-
-.geneboxNaviWhole, .geneboxNaviThirds, .geneboxNaviHalves, .geneboxInfo {
-    width: 100%;
-    height: 20px;
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-
-.geneboxInfo {
-    
-}
-
-.geneboxNaviThirds {
-    display: grid;
-    grid-template-columns: 33% 33% 33%;
-    grid-gap: 0px;
-}
-
-.geneboxNaviHalves {
-    width: 100%;
-    display: grid;
-    grid-template-columns: 50% 50%;
-    grid-gap: 0px;
-}
-
-.geneboxNaviWhole {
-}
-
-
-.geneboxMidThirds {
-    display: grid;
-    grid-template-rows: 33% 33% 33%;
-    grid-gap: 0px;
-}
-.geneboxMidWhole {
-    height: 100%;
-}
-
-.geneboxLeft {
-    cursor: url(cursor/leftArrow.png) 8 8, auto;    
-}
-
-.geneboxRight {
-    cursor: url(cursor/rightArrow.png) 8 8, auto;
-}
-
-.geneboxUp {
-    cursor: url(cursor/upArrow.png) 8 8, auto;
-}
-
-.geneboxDown {
-    cursor: url(cursor/downArrow.png) 8 8, auto;
-}
-
-.geneboxEquals {
-    height: 100%;
-    cursor: url(cursor/upperEquals.png) 8 8, auto;
-}
-
-.gradientSwell {
-    position: absolute;
-    top: 0;
-}
-.gradientSame {
-    display: none;
-}
-.gradientShrink {
-    position: absolute;
-    bottom: 0;
-}
-
-.geneBoxHidden {
-	visibility: hidden;
-}
-
-
-.pedigreeDiv {
-    width: 1000px;
-    height: 600px;
-    position: absolute;
-    left: 0;
-    top: 0;
-    z-index: 1;
-}
-
-.pedigreeMove {
-    cursor: url(cursor/pointyHand.png), auto;
-}
-
-.pedigreeDrawOutOffspring {
-    cursor: url(cursor/pedigree_cursor.png), auto;
-}
-.pedigreeDetach {
-    cursor: url(cursor/scissors.png), auto;
-}
-.pedigreeKill {
-    cursor: url(cursor/gun.png), auto;
-}
-
-.pedigreeBox {
-    z-index: 1;
-    padding: 0px;
-    position: relative;
-    border: 1px solid black
-}
-
-.pedigreeFamilialLineCanvas {
-    width: 1000px;
-    height: 1200px;
-    position: absolute;
-    left: 0;
-    top: 0;
-    z-index: 1;
-}
-
-.pedigreeDrawOutLineDiv {
-    width: 1000px;
-    height: 1200px;
-    position: absolute;
-    left: 0;
-    top: 0;
-    z-index: 0;
-}
-
-.pedigreeDrawOutMousingDiv {
-    width: 1000px;
-    height: 1200px;
-    position: absolute;
-    left: 0;
-    top: 0;
-    z-index: 2147483647;
-}
-
-
-.pedigreeMorphCanvas {
-    position: absolute;
-    background-color: White;
-}
-
-.drawOutCanvas {
-    border: 1px solid black;
-    z-index: 1;
-    padding: 0px;
-    position: relative;
-}
-
-.triangleMorphCanvas {
-    position: absolute;
-    background-color: #FFFFFF;
-    border: 1px solid black;
-}
-
-.triangleCanvas {
-    border: 1px solid blue;
-    width: 1000;
-    height: 600;
-    z-index: -1;
-}
-
-.triangleDiv {
-	border: 1px black solid;
-    width: 1000px;
-    height: 600px;
-    position: absolute;
-    left: 0;
-    top: 0;
-    z-index: 1;
-    cursor: none;
-}
-
-.triangleLineDiv {
-    width: 1000px;
-    height: 600px;
-    position: absolute;
-    left: 0;
-    top: 0;
-    z-index: 0;
-}
-
-
-.triangleLineCanvas {
-    position: absolute;
-    left: 0px;
-    top: 0px;
-}
-@font-face {
-  font-family: chicagoflf;
-  src: url(font/chicagoflf.ttf) format('truetype');
-  font-display: block;
-}
-@font-face {
-  font-family: virtue;
-  src: url(font/virtue.ttf) format('truetype');
-  font-display: block;
-}
-
-body, .ui-widget, .ui-widget button {
-    font-family: chicagoflf;
-}
-
-body {
-    width: 1000px;
-}
-
-
-
-.boxes {
-	position: relative;
-	width: 1000px;
-	height: 600px;
-	grid-template-columns: 33% 33% 33% ;
-	display: grid;
-	grid-gap: 0px;
-	color: #000;
-	
-}
-
-
-.newRandomStart {
-     cursor: url(cursor/die.png), auto;
-	
-}
-.container {
-	width: 1000px;
-	height: 600px;
-	position: relative;
-}
-
-.pointerEventsNone {
-	pointer-events: none;
-}
-
-.boxes, .overlay {
-	width: 1000px;
-	height: 600px;
-	position: absolute;
-	top: 0;
-	left: 0;
-}
-
-.overlay {
-	pointer-events: none;
-	z-index: 100;
-}
-
-.underlay {
-	z-index: -1;
-}
-
-#infoi {
-	z-index: 10;
-}
-
-.boxDiv {
-	height: 100%;
-	width: 100%;
-	position: relative;
-	border-style: solid;
-	border-width: 1px;
-	border-color: black;
-	color: #000;
-}
-
-.box {
-	position: relative;
-	left: 0px;
-	top: 0px;
-	padding: 0px;
-	font-size: 150%;
-}
-
-.midBox {
-	border-width: 2px;
-}
-.wrapper {
-    display: table;
-    table-layout: fixed;
-    white-space: pre;
-    width:90%;
-    background-color:aqua;
-}
-.wrapper div {
-    display: table-cell;
-}
-
-.dialogNoTitle .ui-dialog-titlebar {display:none}
-
-.dialogNoTitle {display: none;}
-
-.headerwrapper {
-    display: table;
-    table-layout: fixed;
-    font-size: 1.25em;
-    white-space: normal;
-
-    width:90%;
-
-    background-color:aqua;
-}
-.headerwrapper div {
-    display: table-cell;
-}
-
-.ui-dialog-title {
-    font-size: 12px
-}
-
-input[type=checkbox]
-{
-  /* Double-sized Checkboxes */
-  -ms-transform: scale(2); /* IE */
-  -moz-transform: scale(2); /* FF */
-  -webkit-transform: scale(2); /* Safari and Chrome */
-  -o-transform: scale(2); /* Opera */
-  padding: 10px;
-}
-
-div {
-	font-size: 12pt;
-}
-
-
-
-.ui-icon-circle-close {
-    cursor: pointer;
-}
-
-
-.ui-widget.ui-widget-content {
-    border: 0px none;
-}
-.ui-widget-content {
-    border: 0px none;
-    background: #ffffff;
-    color: #333333;
-}
-
-.ui-tabs .ui-tabs-panel {
-    padding: 0px;
-    margin: 0px;
-    border-style: none;
-    border-width: 0px;
-}
-
-.no-close .ui-dialog-titlebar-close {
-/*  display: none; */
-}
-
-.ui-dialog { border: 1px solid black;} 
-/* .ui-dialog-titlebar {  display: none; } */
-
-.ui-tabs-nav .ui-state-active a  {
-    background: #1f2b59;
-}
-
-.ui-state-active, .ui-widget-content .ui-state-active, 
-.ui-widget-header .ui-state-active {
-    background: #1f2b59;
-}
-
-.ui-state-default a, .ui-state-default a:link {
-	color: #1f2b59;
-    font-size: 18px;
-    font-weight: bold;
-}
-
-.ui-state-active a, .ui-state-active a:link {
-	color: #ffffff;
-	font-size: 18px;
-    font-weight: bold;
-}
-
-.watchmakerMenu {
-/*	height: 46px; */ /* Classic Mac menu bar height */
-}
-
-
-.about {
-	padding: 0px;
-	margin: 0px;
-}
-.fileInput {
-	width: 300px;
-}
-.file-dialog {
-    padding: 0px;
-    margin: 0px;
-}
-.help-dialog {
-    padding: 0px;
-    margin: 0px;
-}
-
-.status {
-	font-size: smaller;
-}
-
-.fileList .fileSize {
-    text-align: right;	
-}
-.previewFile {
-	border: 1px black solid;
-}
-
-.file-preview-slider
-{
-    height: 200px;
-    width: 15px;
-}
-
-.albumSelected {
-	color: white;
-	background-color: black
-}
-.fileButtonDiv {
-	height: 30px;
-    display: flex; 
-    flex-direction: row;
-    justify-content: space-between; 
-    align-items: flex-start;
-}
-.fileButtonHidden {
-    display: none; 
-}
-
-.fileListPreviewHeader div {
-	font-size: smaller;
-}
-.fileListPreviewFlexDiv {
-	border: 1px black solid;
-	height: 200px;
-	display: flex;
-	flex-direction: row;
-/*	justify-content: space-between; */ 
-	align-items: flex-start;
-}
-
-
-.fileListElement, .fileSize, .fileInput, .ui-widget button {
-    font-size: 12px;
-}
-.fileList, .fileListPreviewHeader {
-	display: grid;
-	width: 50%;
-    grid-gap: 0px;
-	grid-template-columns: 70% 30%;
-    padding: 0px;
-    margin: 0px;
-}
-
-.fileControlRow {
-	display: inline;
-}
-
-
-.watchmakerMenuBar {
-	height: 46px;
-	position: relative;
-	z-index: 2; /* Prevents overlay of popups */
-}
-
-.checked {
-}
-
-.checkbox {
-	min-height: 1px;
-	width: 18px;
-}
-
-.tabicon {
-	padding-top: 8px;
-	padding-right: 15px;
-}
-
-
-.fossil-slider {
-    height: 600px;
-    width: 15px;
-    position: absolute;
-    top: 0px;
-    right: 0px;
-}
-
-.fossilDiv {
-	height: 600px;
-	width: 985px;
-	position: absolute;
-	top: 0px;
-	left: 0px;
-}
+BODY {background-color: blue;}
