--- a/docs/css/pixel_physics.css
+++ b/docs/css/pixel_physics.css
@@ -14,4 +14,8 @@ BODY {background-color: blue;}
     grid-column: 2 / 2;
     grid-row: 1;
   }
+  .three {
+    grid-column: 3 / 3;
+    grid-row: 1;
+  }
   
