--- a/docs/css/pixel_physics.css
+++ b/docs/css/pixel_physics.css
@@ -6,16 +6,23 @@ BODY {background-color: blue;}
     gap: 10px;
     grid-auto-rows: minmax(100px, auto);
   }
-  .one {
-    grid-column: 1 / 1;
-    grid-row: 1;
-  }
-  .two {
-    grid-column: 2 / 2;
-    grid-row: 1;
-  }
-  .three {
-    grid-column: 3 / 3;
-    grid-row: 1;
-  }
+
   
+  .pixelField6x6 {
+  /* style */
+    border: solid;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    gap: 10px;
+    grid-auto-rows: minmax(100px, auto);
+  }
+  .pixelField3x3 {
+    /* style */
+    border: solid;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    gap: 10px;
+    grid-auto-rows: minmax(100px, auto);
+  }
