--- a/docs/css/pixel_physics.css
+++ b/docs/css/pixel_physics.css
@@ -17,12 +17,7 @@ BODY {background-color: blue;}
     gap: 0px;
     grid-auto-rows: minmax(100px, auto);
   }
-  .pixelField3x3 {
+  .pixelField {
     /* style */
     border: solid;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    gap: 0px;
-    grid-auto-rows: minmax(100px, auto);
   }
