--- a/docs/css/pixel_physics.css
+++ b/docs/css/pixel_physics.css
@@ -12,8 +12,8 @@ BODY {background-color: blue;}
   /* style */
     border: solid;
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: repeat(6, 1fr);
+    grid-template-columns: repeat(6, 40px);
+    grid-template-rows: repeat(6, 40px);
     gap: 0px;
     grid-auto-columns: minmax(40px, 40px);
     grid-auto-rows: minmax(40px, 40px);
@@ -22,8 +22,8 @@ BODY {background-color: blue;}
     /* style */
     border: solid;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 40px);
+    grid-template-rows: repeat(3, 40px);
     gap: 0px;
     grid-auto-columns: minmax(40px, 40px);
     grid-auto-rows: minmax(40px, 40px);
