--- a/docs/css/pixel_physics.css
+++ b/docs/css/pixel_physics.css
@@ -12,8 +12,8 @@ BODY {background-color: blue;}
   /* style */
     border: solid;
     display: grid;
-    grid-template-columns: repeat(6, 120px);
-    grid-template-rows: repeat(6, 120px);
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(6, 1fr);
     gap: 0px;
     grid-auto-columns: 120px;
     grid-auto-rows: 120px;
