--- a/docs/css/pixel_physics.css
+++ b/docs/css/pixel_physics.css
@@ -10,24 +10,19 @@ BODY {background-color: blue;}
   
   .pixelField6x6 {
   /* style */
-    border: solid;
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: repeat(6, 1fr);
-    gap: 0px;
-    grid-auto-columns: 120px;
-    grid-auto-rows: 120px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+  grid-auto-rows: 120px;
+  grid-gap: 0px;
+  place-items: center;
   }
   .pixelField3x3 {
-    /* style */
-    border: solid;
     display: grid;
-    grid-template-columns: repeat(3, auto-fit);
-    grid-template-rows: repeat(3, auto-fit);
-    gap: 0px;
-    grid-auto-columns: 40px;
+    grid-template-columns: repeat(auto-fit, minmax(40px, 1fr));
     grid-auto-rows: 40px;
-  }
+    grid-gap: 0px;
+    place-items: center;
+    }
     .pixelField {
     /* style */
     border: solid;
