--- a/docs/css/pixel_physics.css
+++ b/docs/css/pixel_physics.css
@@ -10,8 +10,8 @@ BODY {background-color: blue;}
    
   .pixelField6x6 {
   /* style */
-    width: 800px;
-    border: solid;
+    width: 900px;
+    border: none;
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(6, 1fr);
