--- a/docs/css/pixel_physics.css
+++ b/docs/css/pixel_physics.css
@@ -7,6 +7,7 @@ BODY {background-color: blue;}
     grid-auto-rows: minmax(100px, auto);
   }
   
+  button {width: 40px; height: 40px}
    
   .pixelField6x6 {
   /* style */
