--- a/docs/css/pixel_physics.css
+++ b/docs/css/pixel_physics.css
@@ -10,12 +10,13 @@ button {
 
 .wrapper {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 10px;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 0px;
     grid-auto-rows: minmax(100px, auto);
   }
   
 .pixelField6x6 {
+    grid-column 2 / 3
     border: solid;
     display: grid;
     grid-template-columns: repeat(6, 1fr);
