--- a/docs/css/pixel_physics.css
+++ b/docs/css/pixel_physics.css
@@ -29,6 +29,7 @@ button {
 
   
   .pixelField3x3 {
+    position: relative;
     border: solid;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
