--- a/docs/css/pixel_physics.css
+++ b/docs/css/pixel_physics.css
@@ -43,6 +43,8 @@ button {
   }
 
   .overlay {
+    grid-column: 1 / 3;
+    grid-row: 1 / 3;
     position: relative;
     display: none;
     width: 100%;
