--- a/docs/css/pixel_physics.css
+++ b/docs/css/pixel_physics.css
@@ -46,7 +46,7 @@ button {
 
   .overlay {
     position: absolute;
-    display: none;
+    display: block;
     width: 100%;
     height: 100%;
     top: 0;
