--- a/docs/css/pixel_physics.css
+++ b/docs/css/pixel_physics.css
@@ -28,9 +28,11 @@ button {
 
   .pixelField6x6Cell {
     border: none;
+    position: relative;
   }
   
   .pixelField3x3 {
+    position: absolute;
     border: solid;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -45,6 +47,7 @@ button {
   }
 
   .overlay {
+    position: absolute;
     display: block;
     width: 100%;
     height: 100%;
