--- a/docs/css/pixel_physics.css
+++ b/docs/css/pixel_physics.css
@@ -48,7 +48,7 @@ button {
 
   .overlay {
     position: absolute;
-    display: block;
+    display: none;
     width: 100%;
     height: 100%;
     top: 0;
