--- a/docs/css/pixel_physics.css
+++ b/docs/css/pixel_physics.css
@@ -16,8 +16,10 @@ button {
   }
   
 .pixelField6x6 {
+    padding: 5px;
     grid-column: 2 / 3;
     border: solid;
+
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(6, 1fr);
