--- a/docs/css/pixel_physics.css
+++ b/docs/css/pixel_physics.css
@@ -48,7 +48,7 @@ button {
     border: none;
   }
 
-  .overlay {
+  .hover_overlay {
     position: absolute;
     display: none;
     width: 100%;
@@ -62,6 +62,16 @@ button {
     cursor: pointer;
   }
 
-  .overlay.selected {
+  .selection_overlay {
+    position: absolute;
+    display: none;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     background-color: rgba(255,255,0,0.5);
+    z-index: 3;
+    cursor: pointer;
   }
