--- a/docs/css/pixel_physics.css
+++ b/docs/css/pixel_physics.css
@@ -7,6 +7,13 @@ button {
   height: 100px; 
   font-size:large;
 }
+
+.wrapper {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 0px;
+    grid-auto-rows: minmax(100px, auto);
+  }
   
 .pixelField6x6 {
     padding: 5px;
