--- a/docs/css/pixel_physics.css
+++ b/docs/css/pixel_physics.css
@@ -9,6 +9,7 @@ button {
 }
 
 .wrapper {
+    width: 
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     gap: 0px;
@@ -16,6 +17,7 @@ button {
   }
   
 .pixelField6x6 {
+    width: 769;
     padding: 5px;
     grid-column: 1 / 2;
     border: solid;
