--- a/docs/css/pixel_physics.css
+++ b/docs/css/pixel_physics.css
@@ -17,7 +17,7 @@ button {
   
 .pixelField6x6 {
     width: 781;
-    padding: 5px;
+/*    padding: 5px; */
     grid-column: 1 / 2;
     border: solid;
 
