--- a/docs/css/pixel_physics.css
+++ b/docs/css/pixel_physics.css
@@ -16,11 +16,10 @@ button {
   }
   
 .pixelField6x6 {
-    width: 769;
+    width: 769px;
     padding: 5px;
     grid-column: 1 / 2;
     border: solid;
-
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(6, 1fr);
@@ -41,8 +40,8 @@ button {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
     gap: 0px;
-    grid-auto-columns: repeat(3, 42px);
-    grid-auto-rows: repeat(3, 42px);
+    grid-auto-columns: repeat(3, 40px);
+    grid-auto-rows: repeat(3, 40px);
   }
   
   .pixelField {
