--- a/docs/css/pixel_physics.css
+++ b/docs/css/pixel_physics.css
@@ -1,14 +1,12 @@
 body {
   background-color: darkorange;
   font-family: sans-serif;
+  font-size: large;
 }
 
 .header {
   display: inline;
   width: 100%
-}
-
-.topbartitle {
 }
 
 button {
