--- a/docs/css/pixel_physics.css
+++ b/docs/css/pixel_physics.css
@@ -4,6 +4,10 @@ body {
   font-size: xx-large;
 }
 
+.menu {
+  background-color: rgba(255,255,255,0.0);
+}
+
 .header {
   display: block;
   width: 100%
