--- a/docs/css/pixel_physics.css
+++ b/docs/css/pixel_physics.css
@@ -4,7 +4,7 @@ body {
   font-size: xx-large;
 }
 
-.ui-menu { 
+.ui-menu .ui-menu-item a.ui-state-focus  { 
   width: 50px; 
   background-color: rgba(255,255,255,0.0);
   border: none;
