--- a/docs/css/pixel_physics.css
+++ b/docs/css/pixel_physics.css
@@ -9,7 +9,11 @@ body {
   background-color: rgba(255,255,255,0.0);
   border: none;
 }
-
+.ui-menu-item, a.ui-state-focus  { 
+  width: 150px; 
+  background-color: rgba(255,255,255,0.0);
+  border: none;
+}
 .header {
   display: block;
   width: 100%
@@ -20,7 +24,8 @@ button {
   height: 100px; 
   font-size:large;
 }
-.ui-menu { width: 150px; }
+
+
 .pixelField6x6 {
     width: 769px;
     padding: 5px;
