--- a/docs/css/pixel_physics.css
+++ b/docs/css/pixel_physics.css
@@ -4,13 +4,13 @@ body {
   font-size: xx-large;
 }
 
-.ui-menu .ui-menu-item a.ui-state-focus  { 
+.ui-menu  { 
   width: 50px; 
   background-color: rgba(255,255,255,0.0);
   border: none;
 }
 .ui-menu-item, a.ui-state-focus  { 
-  width: 150px; 
+  width: 50px; 
   background-color: rgba(255,255,255,0.0);
   border: none;
 }
