--- a/docs/css/pixel_physics.css
+++ b/docs/css/pixel_physics.css
@@ -4,16 +4,22 @@ body {
   font-size: xx-large;
 }
 
-.ui-menu  { 
-  width: 82px; 
-  background-color: rgba(255,255,255,0.0);
-  border: none;
-}
-.ui-menu-item, a.ui-state-focus  { 
+a.ui-state-focus {
+
+}  
+
+ui-menu .ui-menu-item { 
   width: 160px; 
   background-color: rgba(255,255,255,0.0);
   border: none;
 }
+
+.ui-menu.hamburger  { 
+  width: 82px; 
+  background-color: rgba(255,255,255,0.0);
+  border: none;
+}
+
 .header {
   display: block;
   width: 100%
