--- a/docs/css/pixel_physics.css
+++ b/docs/css/pixel_physics.css
@@ -8,7 +8,7 @@ a.ui-state-focus {
 
 }  
 
-ui-menu .ui-menu-item { 
+ui-menu, .ui-menu-item { 
   width: 160px; 
   background-color: rgba(255,255,255,0.0);
   border: none;
