--- a/docs/css/pixel_physics.css
+++ b/docs/css/pixel_physics.css
@@ -14,7 +14,7 @@ ui-menu, .ui-menu-item {
   border: none;
 }
 
-.ui-menu.hamburger  { 
+.hamburger  { 
   width: 82px; 
   background-color: rgba(255,255,255,0.0);
   border: none;
