--- a/docs/css/pixel_physics.css
+++ b/docs/css/pixel_physics.css
@@ -8,10 +8,9 @@ a.ui-state-focus {
 
 }  
 */
-ui-menu, .ui-menu-item { 
+.ui-menu, .ui-menu-item { 
   width: 82px;
   background-color: rgba(255,255,255,0.0);
-  border: none;
 }
 
 .hamburger  { 
