--- a/docs/css/pixel_physics.css
+++ b/docs/css/pixel_physics.css
@@ -7,6 +7,9 @@ body {
 a.ui-state-focus {
   background-color: rgba(255,255,255,0.5);
 }  
+.regularmenu {
+  width: 150px;
+}
 
 .ui-menu, .ui-menu-item { 
   width: 82px;
