--- a/docs/css/pixel_physics.css
+++ b/docs/css/pixel_physics.css
@@ -5,18 +5,18 @@ body {
 }
 
 a.ui-state-focus {
-  background-color: rgba(255,255,255,0.5);
+  background-color: orange;
 }  
 
 
 .ui-menu, .ui-menu-item { 
   width: 82px;
-  background-color: rgba(255,255,255,0.0);
+  background-color: darkorange);
 }
 
 .hamburger  { 
   width: 82px; 
-  background-color: rgba(255,255,255,0.0);
+  background-color: darkorange);
   border: none;
 }
 
