--- a/docs/css/pixel_physics.css
+++ b/docs/css/pixel_physics.css
@@ -23,7 +23,9 @@ a.ui-state-focus {
 .regularmenu {
   width: 150px;
 }
-
+#menu {
+  text-align: right;
+}
 .header {
   display: grid;
   width: 100%;
