--- a/docs/css/pixel_physics.css
+++ b/docs/css/pixel_physics.css
@@ -27,7 +27,7 @@ a.ui-state-focus {
 
 .header {
   display: grid;
-  width: 100%;
+  width: 769px;
   gap: 1rem;
   grid-auto-flow: column;
   grid-template-columns: repeat(auto-fit, minmax(min-content, 1fr));
