--- a/docs/css/pixel_physics.css
+++ b/docs/css/pixel_physics.css
@@ -8,6 +8,7 @@ a.ui-state-focus {
   background-color: orange;
 }  
 .menucontainer {
+    border: solid;
     text-align: end;
 }
 .ui-menu, .ui-menu-item { 
