--- a/docs/css/pixel_physics.css
+++ b/docs/css/pixel_physics.css
@@ -9,7 +9,7 @@ a.ui-state-focus {
 }  
 .menucontainer {
     border: solid;
-    text-align: end;
+    text-align: right;
 }
 .ui-menu, .ui-menu-item { 
   width: 82px;
