--- a/docs/css/pixel_physics.css
+++ b/docs/css/pixel_physics.css
@@ -8,12 +8,11 @@ a.ui-state-focus {
   background-color: orange;
 }  
 .menucontainer {
+    margin-left: auto; 
+    margin-right: 0;
     border: solid;
-    text-align: right;
-    display: inline-block;
 }
 .ui-menu, .ui-menu-item { 
-  text-align: right;
   width: 82px;
   background-color: darkorange;
 }
