--- a/docs/css/pixel_physics.css
+++ b/docs/css/pixel_physics.css
@@ -122,7 +122,7 @@ button {
     font-family: monospace;
   }
 
-.pixelDialog, #textDialog, #aboutDialog {
+.pixelDialog {
     display: none; 
     background-color: darkorange;
     text-align:center;
