--- a/docs/css/pixel_physics.css
+++ b/docs/css/pixel_physics.css
@@ -122,7 +122,7 @@ button {
     font-family: monospace;
   }
 
-.pixelDialog {
+.pixelDialog, .pixelDialogTitle {
     display: none; 
     background: darkorange;
     text-align:center;
