--- a/docs/css/pixel_physics.css
+++ b/docs/css/pixel_physics.css
@@ -55,6 +55,7 @@ a.ui-state-focus {
   }
   
   .pixelField3x3 {
+    width: 122;
     position: inline;
     border: solid;
     border-width: 1px;
