--- a/docs/css/pixel_physics.css
+++ b/docs/css/pixel_physics.css
@@ -70,51 +70,34 @@ a.ui-state-focus {
     grid-auto-rows: repeat(3, 40px);
   }
   
-  .pixelField {
+.pixelField {
     border: none;
   }
 
-  .hover_overlay {
-    position: absolute;
-    display: none;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+
+.hover_overlay, .selection_overlay, .equals_overlay {
+  position: absolute;
+  display: none;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 2;
+  cursor: pointer;
+}
+
+.hover_overlay {
     background-color: rgba(255,255,255,0.7);
-    z-index: 2;
-    cursor: pointer;
   }
 
-  .selection_overlay {
-    position: absolute;
-    display: none;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+.selection_overlay {
     background-color: rgba(255,140,0,0.7);
-    z-index: 3;
-    cursor: pointer;
   }
 
-
-  .equals_overlay {
-    position: absolute;
-    display: none;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+.equals_overlay {
     background-color: rgba(255,255,255,0.5);
-    z-index: 2;
-    cursor: pointer;
 }
 
 .pixelDialog {
