--- a/docs/css/pixel_physics.css
+++ b/docs/css/pixel_physics.css
@@ -128,8 +128,18 @@ a.ui-state-focus {
   border-width: 1px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-rows: repeat(1, 1fr);
   gap: 5px;
   grid-auto-columns: repeat(2, 120px);
-  grid-auto-rows: repeat(2, 120px);
+  grid-auto-rows: repeat(1, 120px);
+}
+
+#editorInput3x3 {
+  grid-column: 1/2;
+  grid-row: 1/2;
+}
+
+#editorOutput3x3 {
+  grid-column: 2/3;
+  grid-row: 1/2;
 }
