--- a/docs/css/pixel_physics.css
+++ b/docs/css/pixel_physics.css
@@ -145,5 +145,5 @@ a.ui-state-focus {
 }
 
 .razoredit {
-  background-image: url("img/razor.png");
+  background-image: url("../img/razor.png");
 }
