--- a/docs/css/pixel_physics.css
+++ b/docs/css/pixel_physics.css
@@ -130,7 +130,7 @@ a.ui-state-focus {
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(1, 1fr);
   gap: 5px;
-  grid-auto-columns: repeat(3, 120px);
+  grid-auto-columns: 120px 240px 120px;
   grid-auto-rows: repeat(1, 120px);
 }
 
