--- a/docs/css/pixel_physics.css
+++ b/docs/css/pixel_physics.css
@@ -163,6 +163,11 @@ a.ui-state-focus {
   grid-row: 3 / 4;
 }
 
+#replacecells {
+  grid-column: 3 / 4;
+  grid-row: 2 / 3;
+}
+
 .singlepixel {
   width: 40px;
   height: 40px;
